feat: adding messages table
